Sonar: replace collect(toList()) with toList()